task1/app1/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bs-app1
  namespace: bs-apps
spec:
  
  selector:
    matchLabels:
      app: bs-app1
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: bs-app1
    spec:
      tolerations:
      - key: "app-name"
        operator: "Equal"
        value: "bs-app1"
        effect: "NoSchedule"
      containers:
      - name: bs-app1
        image: mashnoor/bs-app1:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
