task1/app1/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bs-app1
  namespace: default
  labels:
    app: bs-app1
spec:
  type: ClusterIP
  selector:
    app: bs-app1
  ports:
    - port: 80
      targetPort: 8080
